; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_start.c_wakeup.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_start.c_wakeup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.monitor = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.monitor*, i32)* @wakeup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wakeup(%struct.monitor* %0, i32 %1) #0 {
  %3 = alloca %struct.monitor*, align 8
  %4 = alloca i32, align 4
  store %struct.monitor* %0, %struct.monitor** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.monitor*, %struct.monitor** %3, align 8
  %6 = getelementptr inbounds %struct.monitor, %struct.monitor* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.monitor*, %struct.monitor** %3, align 8
  %9 = getelementptr inbounds %struct.monitor, %struct.monitor* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = sub nsw i32 %10, %11
  %13 = icmp sge i32 %7, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load %struct.monitor*, %struct.monitor** %3, align 8
  %16 = getelementptr inbounds %struct.monitor, %struct.monitor* %15, i32 0, i32 2
  %17 = call i32 @pthread_cond_signal(i32* %16)
  br label %18

18:                                               ; preds = %14, %2
  ret void
}

declare dso_local i32 @pthread_cond_signal(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
